--- a/docker-compose.deploy.yaml
+++ b/docker-compose.deploy.yaml
@@ -1,11 +1,18 @@
 version: '3'
 services: 
-  swapper-serve:
-    container_name: swapper-serve
+  swapper-prod-www-deploy:
+    container_name: swapper-prod-www-deploy
     build: 
       context: "."
       dockerfile: "dockerfile.deploy"
     volumes: 
       - "~/.aws:/root/.aws"
-    ports: 
-    - "3000:3000"
+    command: s3 cp . s3://www.swapper.fi --recursive
+  swapper-prod-deploy:
+    container_name: swapper-prod-deploy
+    build: 
+      context: "."
+      dockerfile: "dockerfile.deploy"
+    volumes: 
+      - "~/.aws:/root/.aws"
+    command: s3 cp . s3://swapper.fi --recursive
