--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "branch=$(git branch --show-current) && version=$(openssl rand -base64 6) && REACT_APP_BRANCH=$branch REACT_APP_VERSION=$version react-scripts start",
+    "build": "branch=$(git branch --show-current) && version=$(openssl rand -base64 6) && REACT_APP_BRANCH=$branch REACT_APP_VERSION=$version react-scripts build",
     "test": "CI=true react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
