--- a/dockerfile.deploy
+++ b/dockerfile.deploy
@@ -1,7 +1,10 @@
-FROM node:15 as builder
+FROM node:15.13.0-alpine3.10 as builder
 WORKDIR /app
+RUN apk update && apk add git openssl
+
 
 COPY package.json .
+COPY .git .
 COPY tsconfig.json .
 RUN yarn
 COPY src/ ./src/
