--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "branch=$(git branch --show-current) && version=$(openssl rand -base64 6) && REACT_APP_BRANCH=$branch REACT_APP_VERSION=$version SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "build": "branch=$(git branch --show-current) && version=$(openssl rand -base64 6) && REACT_APP_BRANCH=$branch REACT_APP_VERSION=$version SKIP_PREFLIGHT_CHECK=true react-scripts build",
-    "test": "CI=true SKIP_PREFLIGHT_CHECK=true react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
@@ -44,12 +45,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-typescript": "^7.13.0",
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
     "@storybook/node-logger": "^6.1.21",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.1.21",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3"
   }
 }
