--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.0",
     "@types/react-test-renderer": "^17.0.1",
     "enzyme": "^3.11.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
@@ -24,8 +24,8 @@
   "scripts": {
     "start": "branch=$(git branch --show-current) && version=$(openssl rand -base64 6) && REACT_APP_BRANCH=$branch REACT_APP_VERSION=$version SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "build": "branch=$(git branch --show-current) && version=$(openssl rand -base64 6) && REACT_APP_BRANCH=$branch REACT_APP_VERSION=$version SKIP_PREFLIGHT_CHECK=true react-scripts build",
-    "test": "CI=true SKIP_PREFLIGHT_CHECK=true react-scripts test",
-    "eject": "react-scripts eject",
+    "test": "CI=true SKIP_PREFLIGHT_CHECK=true react-scripts test --watch",
+    "eject": "react-scripts eject --watch",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
