--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "branch=$(git branch --show-current) && version=$(openssl rand -base64 6) && REACT_APP_BRANCH=$branch REACT_APP_VERSION=$version SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "build": "branch=$(git branch --show-current) && version=$(openssl rand -base64 6) && REACT_APP_BRANCH=$branch REACT_APP_VERSION=$version SKIP_PREFLIGHT_CHECK=true react-scripts build",
     "test": "CI=true SKIP_PREFLIGHT_CHECK=true react-scripts test --watch",
-    "eject": "react-scripts eject --watch",
+    "eject": "react-scripts eject --watchAll",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
