--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "scripts": {
     "start": "branch=$(git branch --show-current) && version=$(openssl rand -base64 6) && REACT_APP_BRANCH=$branch REACT_APP_VERSION=$version SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "build": "branch=$(git branch --show-current) && version=$(openssl rand -base64 6) && REACT_APP_BRANCH=$branch REACT_APP_VERSION=$version SKIP_PREFLIGHT_CHECK=true react-scripts build",
-    "test": "CI=true SKIP_PREFLIGHT_CHECK=true react-scripts test --watch",
-    "eject": "react-scripts eject --watchAll",
+    "test": "CI=true SKIP_PREFLIGHT_CHECK=true react-scripts test --watchAll",
+    "eject": "react-scripts eject ",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
